Alterações nas cores da página, predominantemente verde

--- a/index.html
+++ b/index.html
@@ -745,9 +745,7 @@
 
         <div class="section-title">
           <h2>Cientista Chefe</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Equipe de coordenadores do projeto Cientista Chefe Meio Ambiente.</p>
         </div>
 
         <div class="row">
@@ -889,7 +887,7 @@
                           normal distribution of letters, as opposed to using 'Content here, content here', making it
                           look like readable English. Many desktop publishing packages and web page editors infancy.
                           <br>
-                          <button class="btn btn-primary btn-round">Read more</button>
+                          <!-- <button class="btn btn-success btn-round">Read more</button> -->
                         </p>
                       </li>
                       <li data-date="28/02/2017" class="">
@@ -904,7 +902,7 @@
                           normal distribution of letters, as opposed to using 'Content here, content here', making it
                           look like readable English. Many desktop publishing packages and web page editors infancy.
                           <br>
-                          <button class="btn btn-primary btn-round">Read more</button>
+                          <!-- <button class="btn btn-primary btn-round">Read more</button> -->
                         </p>
                       </li>
                       <li data-date="20/04/2017" class="selected">
@@ -919,7 +917,7 @@
                           normal distribution of letters, as opposed to using 'Content here, content here', making it
                           look like readable English. Many desktop publishing packages and web page editors infancy.
                           <br>
-                          <button class="btn btn-primary btn-round">Read more</button>
+                          <!-- <button class="btn btn-primary btn-round">Read more</button> -->
                         </p>
                       </li>
                       <li data-date="20/05/2017">
@@ -934,7 +932,7 @@
                           normal distribution of letters, as opposed to using 'Content here, content here', making it
                           look like readable English. Many desktop publishing packages and web page editors infancy.
                           <br>
-                          <button class="btn btn-primary btn-round">Read more</button>
+                          <!-- <button class="btn btn-primary btn-round">Read more</button> -->
                         </p>
                       </li>
                       <li data-date="09/07/2017">
@@ -949,7 +947,7 @@
                           normal distribution of letters, as opposed to using 'Content here, content here', making it
                           look like readable English. Many desktop publishing packages and web page editors infancy.
                           <br>
-                          <button class="btn btn-primary btn-round">Read more</button>
+                          <!-- <button class="btn btn-primary btn-round">Read more</button> -->
                         </p>
                       </li>
                       <li data-date="30/08/2017">
@@ -964,7 +962,7 @@
                           normal distribution of letters, as opposed to using 'Content here, content here', making it
                           look like readable English. Many desktop publishing packages and web page editors infancy.
                           <br>
-                          <button class="btn btn-primary btn-round">Read more</button>
+                          <!-- <button class="btn btn-success">Read more</button> -->
                         </p>
                       </li>
                       <li data-date="15/09/2017">
@@ -979,7 +977,7 @@
                           normal distribution of letters, as opposed to using 'Content here, content here', making it
                           look like readable English. Many desktop publishing packages and web page editors infancy.
                           <br>
-                          <button class="btn btn-primary btn-round">Read more</button>
+                          <!-- <button class="btn btn-primary btn-round">Read more</button> -->
                         </p>
                       </li>
                       <li data-date="01/11/2017">
@@ -994,7 +992,7 @@
                           normal distribution of letters, as opposed to using 'Content here, content here', making it
                           look like readable English. Many desktop publishing packages and web page editors infancy.
                           <br>
-                          <button class="btn btn-primary btn-round">Read more</button>
+                          <!-- <button class="btn btn-primary btn-round">Read more</button> -->
                         </p>
                       </li>
                       <li data-date="10/12/2017">
@@ -1009,7 +1007,7 @@
                           normal distribution of letters, as opposed to using 'Content here, content here', making it
                           look like readable English. Many desktop publishing packages and web page editors infancy.
                           <br>
-                          <button class="btn btn-primary btn-round">Read more</button>
+                         <!--  <button class="btn btn-primary btn-round">Read more</button> -->
                         </p>
                       </li>
                       <li data-date="19/01/2018">
@@ -1052,14 +1050,14 @@
 
         .cd-timeline-navigation a:hover,
         .cd-timeline-navigation a:focus {
-          border-color: #313740;
+          border-color: #00a84a;
 
         }
 
         .cd-horizontal-timeline a,
         .cd-horizontal-timeline a:hover,
         .cd-horizontal-timeline a:focus {
-          color: #313740;
+          color: #00a84a;
         }
 
         .cd-horizontal-timeline blockquote,
@@ -1157,7 +1155,7 @@
           top: 0;
           height: 100%;
           width: 100%;
-          background-color: #313740;
+          background-color: #00a84a;
           -webkit-transform: scaleX(0);
           -moz-transform: scaleX(0);
           -ms-transform: scaleX(0);
@@ -1212,8 +1210,8 @@
         }
 
         .no-touch .cd-horizontal-timeline .events a:hover::after {
-          background-color: #313740;
-          border-color: #313740;
+          background-color: #00a84a;
+          border-color: #00a84a;
         }
 
         .cd-horizontal-timeline .events a.selected {
@@ -1221,12 +1219,12 @@
         }
 
         .cd-horizontal-timeline .events a.selected::after {
-          background-color: #313740;
-          border-color: #313740;
+          background-color: #00a84a;
+          border-color: #00a84a;
         }
 
         .cd-horizontal-timeline .events a.older-event::after {
-          border-color: #313740;
+          border-color: #7b9d6f;
         }
 
         @media only screen and (min-width: 1100px) {
@@ -1941,24 +1939,24 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Nome" required>
                 </div>
-                <div class="col-md-6 form-group mt-3 mt-md-3">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                <div class="col-md-6 form-group">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                <textarea class="form-control" name="message" rows="5" placeholder="Mensagem" required></textarea>
               </div>
               <div class="my-3">
-                <div class="loading">Loading</div>
+                <div class="loading">Carregando</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Sua mensagem foi enviada, obrigado!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Enviar Mensagem</button></div>
             </form>
 
           </div>
