Tag strong para os menus

--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">O Programa</a></li>
+          <li><strong><a class="nav-link scrollto active" href="#hero">Home</a></li></strong>
+          <li><strong><a class="nav-link scrollto" href="#about">O Programa</a></strong></li>
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <!-- <li><a class="nav-link scrollto o" href="#portfolio">Portfolio</a></li> -->
-          <li><a class="nav-link scrollto" href="#team">Cientista Chefe</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Timeline</a></li>
-          <li class="dropdown"><a href="#services"><span>Produtos</span> <i class="bi bi-chevron-down"></i></a>
+          <li><strong><a class="nav-link scrollto" href="#team">Cientista Chefe</a></strong></li>
+          <li><strong><a class="nav-link scrollto" href="#pricing">Timeline</a></strong></li>
+          <li class="dropdown"><strong><a href="#services"><span>Produtos</span> <i class="bi bi-chevron-down"></i></a></strong>
             <ul>
               <li><a href="#">Plataforma de visualização PEDEA</a></li>
               <li><a href="#">Servidor Geográfico PEDEA</a></li>
               <li><a href="#">Atlas Digital Costeiro e Marinho</a></li>
               <li><a href="#">Observatório Costeiro e Marinho</a></li>
-              <li><a href="#">Plano Estadual de Contingência na Zona Costeira</a></li>
-              <li><a href="#">Demarcação e Monitoramento Ambiental da Linha de Costa</a></li>
+              <li><a href="#">Plano Estadual de Contingência <br> Zona Costeira</a></li>
+              <li><a href="#">Demarcação e Monitoramento <br> da Linha de Costa</a></li>
               <li><a href="#">Inventário da Fauna do Ceará</a></li>
               <li><a href="#">Inventário da Flora do Ceará</a></li>
               <li><a href="#">Painel da Biodiversidade</a></li>
 
             </ul>
           </li>
-          <li class="dropdown"><a href="#testimonials"><span>Projetos</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><strong> <a href="#testimonials"><span>Projetos</span> <i class="bi bi-chevron-down"></i></a></strong>
             <ul>
               <li><a href="#">Planejamento Costeiro e Marinho</a></li>
               <li><a href="#">Sistema de Informação Geográfica (SIG) Ambiental</a></li>
@@ -82,7 +82,7 @@
               <li><a href="#">Mudanças Climáticas</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
+          <li><strong><a class="nav-link scrollto" href="#contact">Contato</a></strong></li>
          <!--  <li><a class="getstarted scrollto" href="#about">Get Started</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
