Eliminação de buttons da timeline

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
           <li class="dropdown"><strong> <a href="#testimonials"><span>Projetos</span> <i class="bi bi-chevron-down"></i></a></strong>
             <ul>
               <li><a href="#">Planejamento Costeiro e Marinho</a></li>
-              <li><a href="#">Sistema de Informação Geográfica (SIG) Ambiental</a></li>
+              <li><a href="#">Sistema de Informação Geográfica <br> (SIG) Ambiental</a></li>
               <li><a href="#">Lista Vermelha da Fauna e Flora</a></li>
-              <li><a href="#">Implementação de Unidades de Conservação</a></li>
+              <li><a href="#">Implementação de Unidades <br> Conservação</a></li>
               <li><a href="#">Mudanças Climáticas</a></li>
             </ul>
           </li>
