--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <!-- Ocultar barra automática do google tradutor -->
+  <link rel="stylesheet" href="assets/css/tradutor.css">
 
   <!-- =======================================================
   * Template Name: OnePage - v4.7.0
@@ -82,8 +84,18 @@
               <li><a href="#">Mudanças Climáticas</a></li>
             </ul>
           </li>
+      
           <li><strong><a class="nav-link scrollto" href="#contact">Contato</a></strong></li>
+
          <!--  <li><a class="getstarted scrollto" href="#about">Get Started</a></li> -->
+         <!-- Menu para tradução automática via API do Google Tradutor -->
+         <li class="dropdown"><strong> <a href="#"><span>Traduzir</span> <i class="bi bi-chevron-down"></i></a></strong>
+          <ul>
+            <li><a href="javascript:trocarIdioma('pt')"><img alt="Português" src="images/es.png"></a></li>
+            <li><a href="javascript:trocarIdioma('es')"><img alt="Espanhol" src="images/es.png"></a></li>
+            <li><a href="javascript:trocarIdioma('en')"><img alt="Inglês" src="images/en.png"></a></li>
+          </ul>
+        </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -321,6 +333,7 @@
           <h2>Projetos</h2>
           <p></p>
         </div>
+
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
@@ -2039,8 +2052,7 @@
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
@@ -2054,6 +2066,12 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
+  <div id="google_translate_element" class="boxTradutor"></div>
+<!-- O Javascript deve vir depois -->
+
+<!-- Chamada do script para tradução automática via api do google tradutor -->
+<script type="text/javascript" src="assets/js/tradutor.js"> </script>
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 
 </html>
