Correção de Responsividade

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
  
   <!-- arquivos para carousel de produtos -->
 
-  <link rel="stylesheet" href="fonts/icomoon/style.css">
+  <!-- <link rel="stylesheet" href="fonts/icomoon/style.css"> -->
 
   <link rel="stylesheet" href="css/owl.carousel.min.css">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+ <!--  <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     
   <!-- Style -->
   <link rel="stylesheet" href="css/style.css">
@@ -127,8 +127,6 @@
       <div class="text-center">
         <a href="#about" class="btn-get-started scrollto">Conheça mais</a>
       </div>
-
-    
     </div>
   </section><!-- End Hero -->
 
