Alterações nos participantes da equipe

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 
         <div class="section-title">
           <h2>Cientista Chefe</h2>
-          <p>Equipe de coordenadores do projeto Cientista Chefe Meio Ambiente.</p>
+          <p>Equipe de coordenadores Programa Cientista Chefe Meio Ambiente</p>
         </div>
 
         <div class="row">
@@ -510,17 +510,15 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/1-jader-santos.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="http://lattes.cnpq.br/0356125933191024" target="_blank"><i class="bi bi-globe"></i></a>
+                  <a href="https://orcid.org/0000-0003-2977-7086 " target="_blank"><i class="bi bi-globe"></i></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Jader de Oliveira Santos</h4>
+                <span>Planejamento, Criação e Implementação de Unidades de Conservação no Ceará</span>
               </div>
             </div>
           </div>
@@ -528,17 +526,15 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/avatar.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="http://lattes.cnpq.br/6609717329301035" target="_blank"><i class="bi bi-globe"></i></a>
+                  <a href="https://orcid.org/0000-0003-1544-7297 " target="_blank"><i class="bi bi-globe"></i></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Luis Ernesto Arruda Bezerra</h4>
+                <span>Cientista Chefe Meio Ambiente</span>
               </div>
             </div>
           </div>
@@ -546,17 +542,15 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/avatar.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="http://lattes.cnpq.br/0083585852610360" target="_blank"><i class="bi bi-globe"></i></a>
+                  <a href="https://orcid.org/0000-0002-4696-3166" target="_blank"><i class="bi bi-globe"></i></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Marcelo de Oliveira Soares </h4>
+                <span>Cientista Chefe Meio Ambiente - Emérito</span>
               </div>
             </div>
           </div>
@@ -564,17 +558,66 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/avatar.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="http://lattes.cnpq.br/8219916023156070" target="_blank"><i class="bi bi-globe"></i></a>
+                  <a href="https://orcid.org/0000-0002-5975-5817" target="_blank"><i class="bi bi-globe"></i></i></a>
+                  <a href="https://www.linkedin.com/in/eduardo-lacerda-b913512b" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Eduardo Lacerda Barros</h4>
+                <span>Planejamento Costeiro e Marinho do Ceará</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/avatar.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="http://lattes.cnpq.br/6560426743476855" target="_blank"><i class="bi bi-globe"></i></a>
+                  <a href="https://orcid.org/0000-0001-5961-3117 " target="_blank"><i class="bi bi-globe"></i></i></a>
+                  <a href="https://www.linkedin.com/in/renan-guerra-b0400233" target="_blank"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Renan Gonçalves Pinheiro Guerra</h4>
+                <span>SIG Ambiental do Ceará</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/avatar.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="http://lattes.cnpq.br/9647959713613299" target="_blank"><i class="bi bi-globe"></i></a>
+                  <a href="https://orcid.org/0000-0001-9064-3736" target="_blank"><i class="bi bi-globe"></i></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Hugo Fernandes-Ferreira</h4>
+                <span>Lista Vermelha de Espécies Ameaçadas do Ceará</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/avatar.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="http://lattes.cnpq.br/3890234334285222" target="_blank"><i class="bi bi-globe"></i></a>
+                  <a href="https://orcid.org/0000-0001-8622-4678" target="_blank"><i class="bi bi-globe"></i></i></a>
+                  <a href="https://www.linkedin.com/in/tarin-frota-montalverne-43836a224" target="_blank"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Tarin Cristino Frota Mont Alverne</h4>
+                <span></span>
               </div>
             </div>
           </div>
