--- a/index.html
+++ b/index.html
@@ -254,9 +254,7 @@
             <p>
             </p>
           </div>
-
         </div>
-
       </div>
     </section><!-- End About Video Section -->
 
@@ -365,6 +363,11 @@
     
     <!-- End Testimonials Section -->
 
+    <!-- ======= Cta Section ======= -->
+      <section id="cta" class="cta">
+        <div class="container" data-aos="zoom-in">
+        </div>
+      </section><!-- End Cta Section -->
     <!-- ======= Produtos Section ======= -->
 
     <section id="produtos" class="testimonials">
@@ -535,13 +538,6 @@
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
-        <!-- <div class="text-center">
-          <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
-        </div> -->  
       </div>
     </section><!-- End Cta Section -->
 
@@ -559,22 +555,6 @@
         </div>
 
         <div class="row">
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/1-jader-santos.jpeg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="http://lattes.cnpq.br/0356125933191024" target="_blank"><i class="bi bi-globe"></i></a>
-                  <a href="https://orcid.org/0000-0003-2977-7086 " target="_blank"><i class="bi bi-globe"></i></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Jader de Oliveira Santos</h4>
-                <span>Planejamento, Criação e Implementação de Unidades de Conservação no Ceará</span>
-              </div>
-            </div>
-          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
@@ -628,7 +608,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/avatar.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/4-renan-guerra.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href="http://lattes.cnpq.br/6560426743476855" target="_blank"><i class="bi bi-globe"></i></a>
                   <a href="https://orcid.org/0000-0001-5961-3117 " target="_blank"><i class="bi bi-globe"></i></i></a>
@@ -658,10 +638,26 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/1-jader-santos.jpeg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="http://lattes.cnpq.br/0356125933191024" target="_blank"><i class="bi bi-globe"></i></a>
+                  <a href="https://orcid.org/0000-0003-2977-7086 " target="_blank"><i class="bi bi-globe"></i></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Jader de Oliveira Santos</h4>
+                <span>Planejamento, Criação e Implementação de Unidades de Conservação no Ceará</span>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/avatar.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/3-tarin.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <a href="http://lattes.cnpq.br/3890234334285222" target="_blank"><i class="bi bi-globe"></i></a>
                   <a href="https://orcid.org/0000-0001-8622-4678" target="_blank"><i class="bi bi-globe"></i></i></a>
