Alteração das cores de divisão de seção

--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
       </div>
     </section><!-- End About Video Section -->
 
+    <!-- ======= Cta Section ======= -->
+      <section id="cta" class="cta">
+        <div class="container" data-aos="zoom-in">
+        </div>
+      </section><!-- End Cta Section -->
+    <!-- ======= Produtos Section ======= -->
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
       <div class="container" data-aos="fade-up">
