Alteração no campos de contato, modificação do FAQ

--- a/index.html
+++ b/index.html
@@ -687,10 +687,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Timeline</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <h2>Timeline do Projeto</h2>
+          <p>Nesta sessão temos uma evolução ao longos dos últimos meses dos projetos relacionados ao programa Cientista Chefe Meio Ambiente</p>
         </div>
 
         <div class="row">
@@ -702,11 +700,11 @@
                     <div class="events-wrapper">
                       <div class="events" style="width: 1800px;">
                         <ol>
-                          <li><a href="#0" data-date="16/01/2017" class="older-event" style="left: 120px;">16 Jan</a>
+                          <li><a href="#0" data-date="16/01/2017" style="left: 120px;" class="selected">16 Jan</a>
                           </li>
                           <li><a href="#0" data-date="28/02/2017" style="left: 300px;" class="older-event">28 Feb</a>
                           </li>
-                          <li><a href="#0" data-date="20/04/2017" style="left: 480px;" class="selected">20 Mar</a></li>
+                          <li><a href="#0" data-date="20/04/2017" style="left: 480px;">20 Mar</a></li>
                           <li><a href="#0" data-date="20/05/2017" style="left: 600px;">20 May</a></li>
                           <li><a href="#0" data-date="09/07/2017" style="left: 780px;">09 Jul</a></li>
                           <li><a href="#0" data-date="30/08/2017" style="left: 960px;">30 Aug</a></li>
@@ -955,44 +953,41 @@
           <ul>
             <li data-aos="fade-up">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse"
-                data-bs-target="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i
+                data-bs-target="#faq-list-1">O que é a Plataforma Estadual de Dados Espaciais (PEDEA)? <i
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur
-                  gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  A PEDEA é uma solução multiplataforma que reúne dados espaciais ambientais e executa o 
+                  seu compartilhamento e apresentação de forma simples e interativa.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2"
-                class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i
+                class="collapsed">Como posso acessar a PEDEA? <i
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                  donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit
-                  ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                  Através do link: <a href="http://pedea.sema.ce.gov.br/"> PEDEA </a> 
+                  onde constará toda a plataforma de forma acessível.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3"
-                class="collapsed">Dolor sit amet consectetur adipiscing elit? <i
+                class="collapsed">De onde vem os dados disponiblizados na PEDEA?  <i
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum
-                  integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt.
-                  Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi
-                  quis
+                  Os dados são disponiblizados pelas secretarias de meio ambiente dos municípios
+                  fazendo parte de uma grande base de dados.
                 </p>
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="300">
+            <!-- <li data-aos="fade-up" data-aos-delay="300">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4"
                 class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
@@ -1016,7 +1011,7 @@
                   tellus in metus vulputate eu scelerisque.
                 </p>
               </div>
-            </li>
+            </li> -->
 
           </ul>
         </div>
@@ -1036,36 +1031,40 @@
         <div>
             <iframe style="border:0; width: 100%; height: 270px;"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.3020414103735!2d-38.53172148533902!3d-3.744236644301454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7491d0110bad3%3A0x6e86c90ae7770db7!2sSemace!5e0!3m2!1spt-BR!2sbr!4v1650983304427!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>   
+            </iframe>  
+            <br> 
         </div>
-
-        <div class="row mt-5">
-
-          <div class="col-lg-4">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Localização:</h4>
-                <p>Fortaleza, Ceará</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Telefone:</h4>
-                <p>+1 5589 55488 55s</p>
-              </div>
-
+        <br>
+        <div class="row lg-4">
+          <div class="col">
+            <div class="address">
+              <i class="bi bi-geo-alt"></i>
+              <h4>Localização:</h4>
+              <p>Fortaleza, Ceará</p>
             </div>
+          </div>
+
+          <div class="col">
+            <div class="email">
+              <i class="bi bi-envelope"></i>
+              <h4>Email:</h4>
+              <p>info@example.com</p>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="phone">
+              <i class="bi bi-phone"></i>
+              <h4>Telefone:</h4>
+              <p>+1 5589 55488 55s</p>
+            </div>
+          </div>
+          
+          <div class="info">
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+          <!-- <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
@@ -1090,7 +1089,7 @@
               <div class="text-center"><button type="submit">Enviar Mensagem</button></div>
             </form>
 
-          </div>
+          </div> -->
 
         </div>
 
