Atualização do Link PEDEA

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 pelo Sistema Estadual do Meio Ambiente (SIEMA). Em forte apelo ao adequado ordenamento na geração, no armazenamento, 
                 no acesso, no compartilhamento, na disseminação e no uso dos dados espaciais produzidos pelos órgãos ambientais do Estado.
                 </p>
-              <div class="author"><a href="http://geohub.sema.ce.gov.br/portal/" target="_blank">&mdash; Plataforma de visualização PEDEA</a></div>
+              <div class="author"><a href="https://pedea.sema.ce.gov.br/portal/" target="_blank">&mdash; Plataforma de visualização PEDEA</a></div>
             </blockquote>
           </div>
         </div>  <!-- .item -->
@@ -969,7 +969,7 @@
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Através do link: <a href="http://pedea.sema.ce.gov.br/"> PEDEA </a> 
+                  Através do link: <a href="https://pedea.sema.ce.gov.br/portal/"> PEDEA </a> 
                   onde constará toda a plataforma de forma acessível.
                 </p>
               </div>
