Alteração de Imagem de Fundo

--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
 
         <div class="section-title">
           <h2>Timeline do Projeto</h2>
-          <p>Nesta sessão temos uma evolução ao longos dos últimos meses dos projetos relacionados ao programa Cientista Chefe Meio Ambiente</p>
+          <p>Nesta sessão temos uma evolução ao longos dos últimos anos dos projetos relacionados ao programa Cientista Chefe Meio Ambiente</p>
         </div>
 
         <div class="row">
