--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <!-- <h1 class="logo"><a href="index.html">Home</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="assets/img/ccma_home.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -1168,10 +1168,13 @@
 
         <div>
             <iframe style="border:0; width: 100%; height: 270px;"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.3020414103735!2d-38.53172148533902!3d-3.744236644301454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7491d0110bad3%3A0x6e86c90ae7770db7!2sSemace!5e0!3m2!1spt-BR!2sbr!4v1650983304427!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>  
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.270528503962!2d-38.50011548533887!3d-3.751160144338808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7489372ed3bd5%3A0x3d104fb3ea1a912f!2sSecretaria%20do%20Meio%20Ambiente%20do%20Cear%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1668793048092!5m2!1spt-BR!2sbr" 
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
             <br> 
         </div>
+
+    
         <br>
         <div class="row lg-4">
           <div class="col">
@@ -1186,7 +1189,7 @@
             <div class="email">
               <i class="bi bi-envelope"></i>
               <h4>Site:</h4>
-              <p><a href="https://www.sema.ce.gov.br" target="_blank">Secretaria de Meio Ambiente</a></p>
+              <p><a href="https://www.sema.ce.gov.br" target="_blank">Secretaria do Meio Ambiente</a></p>
             </div>
           </div>
 
